--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -95,7 +95,7 @@ import groovy.json.*
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
                     body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information",
                     to: "gsemenduyev@freewheel.tv",
-                    cc: "ghenikwork@gmail.com; ghena187@gmail.com"
+                    cc: "ghenikwork@gmail.com, ghena187@gmail.com"
                 );
             }
         }
