--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -1,5 +1,8 @@
 #!/usr/bin/env groovy
 import groovy.json.*
+
+def emailMultipleContacts  = "ghenikwork@gmail.com, ghena187@gmail.com";
+def emailContact = "gsemenduyev@freewheel.tv";
     pipeline {
     agent {
         docker {
@@ -94,8 +97,8 @@ import groovy.json.*
                 mail(
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
                     body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information",
-                    to: "gsemenduyev@freewheel.tv",
-                    cc: "ghenikwork@gmail.com, ghena187@gmail.com"
+                    to: emailContact,
+                    cc: emailMultipleContacts
                 );
             }
         }
@@ -104,11 +107,11 @@ import groovy.json.*
                 mail(
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
                     body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information",
-                    to: "gsemenduyev@freewheel.tv",
-                    cc: "ghenikwork@gmail.com, ghena187@gmail.com"
+                    to: emailContact,
+                    cc: emailMultipleContacts
                 );
             }
         }
     }
 }
-env.TZ = TimeZone.getTimeZone('America/Chicago').id
+//env.TZ = TimeZone.getTimeZone('America/Chicago').id
