--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -15,7 +15,7 @@ def emailContact = "gsemenduyev@freewheel.tv";
         ansiColor('xterm')
     }
     triggers {
-        cron("53 15 * * *")
+        cron("0 15 * * *")
     }
     stages {
         stage('Create TestRail Run') {
@@ -76,7 +76,11 @@ def emailContact = "gsemenduyev@freewheel.tv";
                 json = JsonOutput.prettyPrint(json)
                 writeFile(file: 'E2E/Strata-eBiz/cypress.env.json', text: json)
                 sh "cd E2E/Strata-eBiz && node ./cucumber-html-report.js"
-                sh 'date'
+                mail(
+                    subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
+                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information",
+                    to: emailContact
+                );
             }
             publishHTML(target : [allowMissing: true,
                 alwaysLinkToLastBuild: true,
@@ -93,16 +97,16 @@ def emailContact = "gsemenduyev@freewheel.tv";
                 reportName: 'Multi HTML Report',
                 reportTitles: 'Multi HTML Report'])
         }
-        success{
-                script {
-                mail(
-                    subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
-                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information",
-                    to: emailContact,
-                    cc: emailMultipleContacts
-                );
-            }
-        }
+        // success{
+        //         script {
+        //         mail(
+        //             subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
+        //             body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information",
+        //             to: emailContact,
+        //             cc: emailMultipleContacts
+        //         );
+        //     }
+        // }
         failure{
                 script {
                 mail(
