--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -1,7 +1,7 @@
 #!/usr/bin/env groovy
 import groovy.json.*
 
-def groupEmail  = "ghenikwork@gmail.com, ghena187@gmail.com, gsemendyev@yahoo.com";
+def groupEmail  = "StrataeBusiness@freewheel.com, kvelvadapu@freewheel.com, syenumula@freewheel.com";
 def personalEmail = "gsemenduyev@freewheel.tv";
     pipeline {
     agent {
