--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -99,7 +99,7 @@ def personalEmail = "gsemenduyev@freewheel.tv";
         }
         failure{
                 script {
-                    def reporterConfig = readJSON file: 'E2E/Strata-eBiz/cypress/fixtures/results/test-results.txt'
+                    def reporterConfig = readFile(file: 'E2E/Strata-eBiz/cypress/fixtures/results/test-results.txt')
                 mail(
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
                     body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. \n" + reporterConfig,
