--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -99,13 +99,13 @@ def personalEmail = "gsemenduyev@freewheel.tv";
         }
         failure{
                 script {
-                    def reporterConfig = readFile(file: 'E2E/Strata-eBiz/cypress/fixtures/results/test-results.txt')
+                    def fileContent = readFile(file: 'E2E/Strata-eBiz/cypress/fixtures/results/test-results.txt').trim()
+                    def lines = fileContent.readLines()
                 mail(
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
-                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. \n" + reporterConfig,
+                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. \n" + lines.join('\n'),
                     to: personalEmail
                 );
             }
         }
     }
-}
