--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -77,13 +77,13 @@ def personalEmail = "gsemenduyev@freewheel.tv";
                 writeFile(file: 'E2E/Strata-eBiz/cypress.env.json', text: json)
                 sh "cd E2E/Strata-eBiz && node ./cucumber-html-report.js"
 
-                def fileContent = readFile(file: 'E2E/Strata-eBiz/cypress/fixtures/results/test-results.txt').trim()
+                def fileContent = readFile(file: 'E2E/Strata-eBiz/cypress/reports/run-info/test-results.txt').trim()
                 def lines = fileContent.readLines()
                 def formattedContent = '<br>' + lines.join('<br>')
-                
+
                 mail(
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
-                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. \n ${currentBuild.currentResult}:" + formattedContent,
+                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. \n" + formattedContent,
                     to: personalEmail, 
                     mimeType: 'text/html'
                 );
@@ -105,12 +105,12 @@ def personalEmail = "gsemenduyev@freewheel.tv";
         }
         failure{
                 script {
-                    def fileContent = readFile(file: 'E2E/Strata-eBiz/cypress/fixtures/results/test-results.txt').trim()
+                    def fileContent = readFile(file: 'E2E/Strata-eBiz/cypress/reports/run-info/test-results.txt').trim()
                     def lines = fileContent.readLines()
                     def formattedContent = '<br>' + lines.join('<br>')
                 mail(
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
-                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. \n ${currentBuild.currentResult}:" + formattedContent,
+                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. \n" + formattedContent,
                     to: personalEmail, 
                     mimeType: 'text/html'
                 );
