Env file test 1

--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -53,10 +53,23 @@ def qaTeamEmail = "cableqa@freewheel.com";
                         writeFile(file: 'E2E/Strata-eBiz/cypress.env.json', text: json)
                     }
                 // Copy paste Jenkins config file into current project
-                def configFilePath = configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]).getPath();
-                def configFileContent = readFile(configFilePath);
-                def configData = readJSON(text: configFileContent);
-                writeFile(file: 'E2E/Strata-eBiz/cypress/fixtures/environment/environments.json', text: json)
+                // def configFilePath = configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]).getPath();
+                // def configFileContent = readFile(configFilePath);
+                // def configData = readJSON(text: configFileContent);
+                // writeFile(file: 'E2E/Strata-eBiz/cypress/fixtures/environment/environments.json', text: json)
+                
+                Strata-eBiz_Environments
+                
+                if (fileExists('Strata-eBiz_Environments')) {
+                  println("Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World!")
+                 } else {
+                       error("Config file not found.")
+                 }
+                
+                
+                
+                
+                
                 }
             }
         }
