Env file test 2

--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -56,9 +56,7 @@ def qaTeamEmail = "cableqa@freewheel.com";
                 // def configFilePath = configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]).getPath();
                 // def configFileContent = readFile(configFilePath);
                 // def configData = readJSON(text: configFileContent);
-                // writeFile(file: 'E2E/Strata-eBiz/cypress/fixtures/environment/environments.json', text: json)
-                
-                Strata-eBiz_Environments
+                // writeFile(file: 'E2E/Strata-eBiz/cypress/fixtures/environment/environments.json', text: json
                 
                 if (fileExists('Strata-eBiz_Environments')) {
                   println("Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World!")
