--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -52,17 +52,19 @@ def qaTeamEmail = "cableqa@freewheel.com";
                         json = JsonOutput.prettyPrint(json)
                         writeFile(file: 'E2E/Strata-eBiz/cypress.env.json', text: json)
                     }
+
+                    checkout scm
                 // Copy paste Jenkins config file into current project
                 // def configFilePath = configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]).getPath();
                 // def configFileContent = readFile(configFilePath);
                 // def configData = readJSON(text: configFileContent);
                 // writeFile(file: 'E2E/Strata-eBiz/cypress/fixtures/environment/environments.json', text: json
                 
-                if (fileExists('config/Strata-eBiz_Environments.json')) {
-                  println("Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World!")
-                 } else {
-                       error("Config file not found.")
-                 }
+                // if (fileExists('config/Strata-eBiz_Environments.json')) {
+                //   println("Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World!")
+                //  } else {
+                //        error("Config file not found.")
+                //  }
                 
                 
                 
