--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -2,12 +2,12 @@
 import groovy.json.*
 
 import jenkins.model.Jenkins
-import hudson.model.AbstractItem
+import jenkins.util.VirtualFile
 
 def printConfigFilePaths() {
     def configFilePaths = []
-    Jenkins.instance.allItems(AbstractItem).each { item ->
-        def configFile = item.getConfigFile()
+    Jenkins.instance.getExtensionList(jenkins.model.JenkinsLocationConfiguration).each { locationConfig ->
+        def configFile = locationConfig.getXmlFile()
         if (configFile) {
             def filePath = configFile.getFile().getAbsolutePath()
             configFilePaths.add(filePath)
