--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -1,22 +1,6 @@
 #!/usr/bin/env groovy
 import groovy.json.*
 
-import jenkins.model.Jenkins
-
-def printConfigFilePaths() {
-    def configFilePaths = []
-    Jenkins.instance.getAllItems().each { item ->
-        def configFile = item.getConfigFile()
-        if (configFile) {
-            def filePath = configFile.getFile().getAbsolutePath()
-            configFilePaths.add(filePath)
-            echo "Config file path: ${filePath}"
-        }
-    }
-    return configFilePaths
-}
-
-def allConfigFilePaths = printConfigFilePaths()
 
 def strataEBizTeamEmail  = "StrataeBusiness@freewheel.com";
 def qaTeamEmail = "cableqa@freewheel.com";
@@ -70,7 +54,10 @@ def qaTeamEmail = "cableqa@freewheel.com";
                         writeFile(file: 'E2E/Strata-eBiz/cypress.env.json', text: json)
                     }
                      echo "Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World!"
-                     allConfigFilePaths
+                    configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]) {
+                    // Access the config file contents using the 'configFile' variable
+                    sh 'echo "${configFile}"'
+                    }
                      echo "Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World!"
                 // Copy paste Jenkins config file into current project
                 // def configFilePath = configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]).getPath();
