--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -20,9 +20,22 @@ def qaTeamEmail = "cableqa@freewheel.com";
         cron("0 15 * * *")
     }
     stages {
+        stage('Config file test'){
+            steps {
+                echo '!-------------------------------------------------!'
+                configFileProvider([configFile(fileId: 'your-config-file-id', variable: 'configFile')]) {
+                    script {
+                        def json = readJSON(text: configFile.getText())
+                        def value = json.propertyName // Replace 'propertyName' with the actual property name in the JSON file
+                        echo "The value is: ${value}"
+                    }
+                }
+                echo '!-------------------------------------------------!'
+            }
+
+        }
         stage('TestRail integration') {
             steps {
-            configFileProvider([configFile(fileId: 'your-config-file-id', variable: 'configFile')]) {
                 script {
                     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'TestRail_GS', passwordVariable: 'PASSWORD', usernameVariable: 'USERNAME']])  {
                         def domain = "https://testrail-strata.freewheel.tv/testrail/"
@@ -54,16 +67,6 @@ def qaTeamEmail = "cableqa@freewheel.com";
                         json = JsonOutput.prettyPrint(json)
                         writeFile(file: 'E2E/Strata-eBiz/cypress.env.json', text: json)
                     }
-                     echo "Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World!"
-                    
-                    
-                        def json2 = readJSON(text: configFile.getText())
-                        def value = json2.propertyName // Replace 'propertyName' with the actual property name in the JSON file
-                        echo "The value is: ${value}"
-                     
-                     
-                     
-                     echo "Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World! Hello, World!"
                 // Copy paste Jenkins config file into current project
                 // def configFilePath = configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]).getPath();
                 // def configFileContent = readFile(configFilePath);
@@ -78,7 +81,7 @@ def qaTeamEmail = "cableqa@freewheel.com";
                 
                 
                 
-                }
+                
                 
                 }
             }
