Env file test 18

--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -23,7 +23,7 @@ def qaTeamEmail = "cableqa@freewheel.com";
         stage('Config file test'){
             steps {
                 echo '!-------------------------------------------------!'
-                configFileProvider([configFile(fileId: 'your-config-file-id', variable: 'configFile')]) {
+                configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]) {
                     script {
                         def json = readJSON(text: configFile.getText())
                         def value = json.propertyName // Replace 'propertyName' with the actual property name in the JSON file
