--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -25,9 +25,11 @@ def qaTeamEmail = "cableqa@freewheel.com";
                 echo '!-------------------------------------------------!'
                 configFileProvider([configFile(fileId: '16d93a3a-a4a4-4764-9cb5-231f80e7261f', variable: 'configFile')]) {
                     script {
-                        def json3 = readJSON(text: configFile.getText())
-                        def value = json3.arfpUrlQa // Replace 'propertyName' with the actual property name in the JSON file
-                        echo "The value is: ${value}"
+                        echo '++++++++++++++++++++++++++++++++++++++++++++++++++++++++'
+                        def json = readJSON(text: configFile.getText())
+                        def firstValue = json.keySet().iterator().next()
+                        echo "The first value is: ${json[firstValue]}"
+                        echo '++++++++++++++++++++++++++++++++++++++++++++++++++++++++'
                     }
                 }
                 echo '!-------------------------------------------------!'
